--- a/my-project/ansible/inventories/setup.yml
+++ b/my-project/ansible/inventories/setup.yml
@@ -4,5 +4,5 @@ all:
    ansible_ssh_private_key_file: ~/.ssh/id_rsa
  children:
    prod:
-     hosts: justine.sammut.takima.cloud
+     hosts: clement.jassey.takima.cloud
 
